# Intelligent-Data-Service-using-Langgraph-and-Streamlit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  langgraph.json  metabase.py  password_hasher.py  pyproject.toml  test.py
docker/: Dockerfile.app  Dockerfile.service
media/: agent_architecture.excalidraw
src/: authentication.py  run_agent.py  run_client.py  run_service.py  streamlit_app.py
src/agents/: __init__.py  agents.py  chatbot.py  data_analytics.py  llama_guard.py  research_assistant.py  tools.py  utils.py
src/agents/bg_task_agent/: bg_task_agent.py  task.py
src/agents/data_analytics_agent/: helper_functions.py  models.py  (+1 more)
src/client/: __init__.py  client.py  database_client.py  schema_client.py
src/config/: database.py  dependencies.py  logger.py  settings.py
src/core/: __init__.py  llm.py  settings.py
src/models/: backend.py  database.py
src/prompts/: sql_converter.py
src/schema/: __init__.py  models.py  schema.py  task_data.py
src/service/: __init__.py  bedrock_service.py  excel_service.py  metabase_service.py  minio_service.py  service.py  utils.py  vectordb_service.py
src/streamlit_service/: message_handller.py  tabs.py
src/styles/: custom_styles.py
src/utils/: custom_exception.py
tests/: conftest.py
tests/app/: conftest.py  test_streamlit_app.py
tests/client/: conftest.py  test_client.py
tests/core/: test_llm.py  test_settings.py
tests/integration/: test_docker_e2e.py
tests/service/: conftest.py  test_auth.py  test_service.py  test_service_e2e.py  test_utils.py
(+1 files in other folders)
